--- a/src/core_ocean/Makefile
+++ b/src/core_ocean/Makefile
@@ -2,17 +2,21 @@
 
 
 OCEAN_SHARED_INCLUDES = -I$(PWD)/../framework -I$(PWD)/../external/esmf_time_f90 -I$(PWD)/../operators
-OCEAN_SHARED_INCLUDES += -I$(PWD)/BGC -I$(PWD)/shared -I$(PWD)/analysis_members -I$(PWD)/cvmix/src/shared -I$(PWD)/mode_forward -I$(PWD)/mode_analysis -I$(PWD)/mode_init
+OCEAN_SHARED_INCLUDES += -I$(PWD)/BGC -I$(PWD)/shared -I$(PWD)/analysis_members -I$(PWD)/cvmix/src/shared -I$(PWD)/mode_forward -I$(PWD)/mode_analysis -I$(PWD)/mode_init -I$(PWD)/shtns/include
 
 all: shared libcvmix analysis_members libBGC shtns
 	(cd mode_forward; $(MAKE) FCINCLUDES="$(FCINCLUDES) $(OCEAN_SHARED_INCLUDES)" all )
 	(cd mode_analysis; $(MAKE) FCINCLUDES="$(FCINCLUDES) $(OCEAN_SHARED_INCLUDES)" all )
 	(cd mode_init; $(MAKE) FCINCLUDES="$(FCINCLUDES) $(OCEAN_SHARED_INCLUDES)" all )
 	(cd driver; $(MAKE) FCINCLUDES="$(FCINCLUDES) $(OCEAN_SHARED_INCLUDES)" all )
+	(cd shtns; export CPP=cpp; ./configure --prefix=`pwd` --enable-openmp; make; make install; export CPP='cpp -P -traditional')
 	if [ -e libdycore.a ]; then \
 		($(RM) libdycore.a) \
 	fi
 	ar -ru libdycore.a `find . -type f -name "*.o"`
+
+shtns:
+	(cd shtns; export CPP=cpp; ./configure --enable-openmp; echo "----- shtns ----"; make; export CPP='cpp -P -traditional')
 
 core_reg:
 	$(CPP) $(CPPFLAGS) $(CPPINCLUDES) Registry.xml > Registry_processed.xml
@@ -64,9 +68,6 @@ shared: libcvmix libBGC
 
 analysis_members: libcvmix shared
 	( cd analysis_members; $(MAKE) FCINCLUDES="$(FCINCLUDES) $(OCEAN_SHARED_INCLUDES)" CPPFLAGS="$(CPPFLAGS)" CPPINCLUDES="$(CPPINCLUDES)" all ) 
-
-shtns: shtns
-	(cd shtns; echo "---------- Making SHTns ------------; ./configure --enable-openmp; $(MAKE) FCINCLUDES="$(FCINCLUDES) $(OCEAN_SHARED_INCLUDES)")
 
 clean:
 	if [ -e cvmix/.git ]; then \
